# llm_tools

./: .gitignore  Makefile  README.md  opencode.json  pyproject.toml
norms/: character-completeness.md  plot-quality.md
notebooks/: Summarize_MapReduce.ipynb  TesPrologue.ipynb  Untitled.ipynb
scripts/: register_prompts.py
src/llm_tools/: __init__.py  agenta_client.py  cli.py  config.py  llm.py  models.py
src/llm_tools/io_/: __init__.py  jsonl.py
src/llm_tools/parsers/: __init__.py  base.py  markdown.py  open_webui.py  silly_tavern.py
src/llm_tools/pipelines/: __init__.py  character_design.py  consistency.py  memory.py  refine.py  summarize.py
src/llm_tools/prompts/: __init__.py  character_design.py  consistency.py  memory.py  refine.py  summarize.py
tests/: conftest.py  test_agenta_client.py  test_llm.py
tests/test_parsers/: test_silly_tavern.py
tests/test_pipelines/: test_character_design.py  test_consistency.py  test_memory.py  test_refine.py  test_summarize.py
